cmake_minimum_required(VERSION 3.10)
project(test-ceres_pthread CXX)
add_executable(test-ceres_pthread ceres_pthread.cpp base.cpp rosenbrock.cpp)
target_include_directories(test-ceres_pthread PRIVATE ${CMAKE_SOURCE_DIR}/source)
target_link_libraries(test-ceres_pthread PRIVATE project-settings)
add_test(NAME test-ceres_pthread COMMAND test-ceres_pthread)
