cmake_minimum_required(VERSION 3.10)
project(test-ceres_pthread CXX)
add_executable(${PROJECT_NAME} ceres_pthread.cpp base.cpp rosenbrock.cpp)
target_include_directories(${PROJECT_NAME}  PRIVATE ${CMAKE_SOURCE_DIR}/source)
target_link_libraries(${PROJECT_NAME} PRIVATE project-settings)
add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME} )
