cmake_minimum_required(VERSION 3.10)
project(test-eigen_openmp)
add_executable(test-eigen_openmp eigen_openmp.cpp)
target_include_directories(test-eigen_openmp PRIVATE ${CMAKE_SOURCE_DIR}/source)
target_link_libraries(test-eigen_openmp PRIVATE project-settings)
add_test(NAME test-eigen_openmp COMMAND test-eigen_openmp)
